# openapi/param_contract.json
@@ -97,6 +97,15 @@
           "fidelity": {"required": false}
         }
       }
+    },
+    "/v2/oi": {
+      "get": {
+        "params": {
+          "condition": {
+            "required": false
+          }
+        }
+      }
     }
   }
 }
